WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310761
Guard against null dereference in SharedBufferReference::serializableBuffer()
https://bugs.webkit.org/show_bug.cgi?id=310761
Summary
Guard against null dereference in SharedBufferReference::serializableBuffer()
Chris Dumez
Reported
2026-03-25 18:44:03 PDT
Guard against null dereference in SharedBufferReference::serializableBuffer().
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-03-25 18:45:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61364
EWS
Comment 2
2026-03-26 02:16:39 PDT
Committed
309976@main
(44147f302fcf): <
https://commits.webkit.org/309976@main
> Reviewed commits have been landed. Closing PR #61364 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-26 02:17:12 PDT
<
rdar://problem/173392266
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug