Cherry-pick 309976@main (44147f302fcf). https://bugs.webkit.org/show_bug.cgi?id=310761

Guard against null dereference in SharedBufferReference::serializableBuffer()
    https://bugs.webkit.org/show_bug.cgi?id=310761

    Reviewed by Kimmo Kinnunen.

    SharedMemory::copyBuffer() can return nullptr.

    * Source/WebKit/Platform/IPC/SharedBufferReference.cpp:
    (IPC::SharedBufferReference::serializableBuffer const):

    Canonical link: https://commits.webkit.org/309976@main

Canonical link: https://commits.webkit.org/305877.315@webkitglib/2.52